# sweeper

./: .pre-commit-config.yaml  ADR.md  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg
sweeper/: main.py
sweeper/app/common/: enums.py
sweeper/app/common/utils/: mime_typer.py
sweeper/app/domain/: actions.py  directories.py  file.py  storage.py
sweeper/app/persistence/: storage_creator.py  storages.py
sweeper/app/persistence/rules/: factories.py
sweeper/app/usecases/: sweeper_usecase.py
sweeper/common/: types.py
sweeper/common/utils/: mime_typer.py
sweeper/domain/: actions.py  file.py  storages.py
sweeper/domain/storage_factory/: factories.py  factory_mapper.py  plant_registry.py
sweeper/infrastructure/settings/: base.py
sweeper/persistence/: storages.py
sweeper/persistence/rules/: factories.py
sweeper/usecases/: sweeper_usecase.py
tests/: conftest.py  test_file.py  test_mime_typer.py  test_storage_creator.py  test_sweeper.py
tests/fixtures/: file_without_ext  sorting_test.dmg  test.mov
tests/persistence/: test_rules.py  test_storages.py
tests/utils/: tools.py
