[tool.poetry]
name = "sweeper"
version = "0.1.0"
description = ""
authors = ["Boris <kolesnikoff.bn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
hypothesis = "^6.32.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
line_length = 120

[tool.black]
line-length = 120
